Changelog: - Fix issue with blog post title card thumbnails not being displayed correctly on Firefox browsers. - Fix issue with blog post title cards grid not being displayed correctly on small mobile devices. - Fix issue with header and footer of website not being displayed correctly when the blog post title cards grid overflowed on the x-axis.

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -20,3 +20,7 @@ button {
 h1, h2, h3, h4, h5, h6, ul, ol, p {
     margin: 0px;
 }
+
+.app {
+    position: initial;
+}
