--- a/src/components/blog-view/BlogView.css
+++ b/src/components/blog-view/BlogView.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     row-gap: 20px;
     padding: 0px 20px;
+    flex-grow: 1;
 }
 
 .blog-title-cards-grid {
@@ -10,7 +11,10 @@
     column-gap: 20px;
     row-gap: 20px;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 1fr;
+    grid-auto-rows: max-content;
+    overflow-x: auto;
+    overflow-y: auto;
+    flex-grow: 1;
 }
 
 img {
@@ -46,6 +50,7 @@ img {
     display: flex;
     flex-direction: column;
     row-gap: 20px;
+    flex-grow: 1;
 }
 
 .return-to-blog-posts-section-button {
